# MultiDim

./: CMakeLists.txt  MultiDim.kdev4  build.linux  build.macosx
cmake/Modules/: FindROOT.cmake  ROOTHelpers.cmake
macros/: Test2D.cpp
src/: .TMCGenerator.h.kate-swp  FINT.c  MultiDimDict.cc  MultiDimDict.h  MultiDimLinkDef.h  TMultiDim.cc  TMultiDim.h
